# telebuba

./: .env.example  .gitignore  .nojekyll  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CLAUDE.md  conftest.py  index.html  main.py  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  mutation-baseline.json
.github/workflows/: ci.yml  mex.yml  nightly.yml  one-shot-mex-cleanup.yml
.mex/: AGENTS.md  HEARTBEAT.md  ROUTER.md  SETUP.md  SYNC.md  config.json
.mex/context/: architecture.md  ci.md  conventions.md  decisions.md  frontend.md  kanban.md  logging.md  neurocomment.md  proxy.md  rtk.md  runtime.md  services.md  setup.md  skills.md  stack.md  telegram.md  warming.md
.mex/events/: decisions.jsonl
.mex/patterns/: INDEX.md  README.md  add-api-endpoint.md  add-auth.md  add-feature.md  add-frontend-slice.md  add-service.md  add-telegram-task.md  add-warming-job.md
.mex/state/: active.md
.tool-configs/: AGENTS.md  CLAUDE.md
api/: __init__.py  deps.py  errors.py
api/v1/: __init__.py  _accounts_channel_posts.py  _accounts_channels.py  _accounts_media.py  _errors.py  _uploads.py  accounts.py  accounts_media.py  auth.py  events.py  health.py  logs.py  neurocomment.py  proxies.py  warming.py
assets/: index-BrbIRUl6.js  index-HCNnN2nw.css  index-RRIkLqTJ.js  index-YjZneQRW.css
core/: _config_domains.py  _config_warming.py  _schema_tables.py  auth.py  config.py  db.py  device_fingerprint.py  events.py  gemini.py  logging.py  migration_steps.py  migration_steps_neurocomment.py  migration_steps_pool.py  migrations.py  openai.py  phone_geo.py  proxy_check.py  tdata_import.py  telegram_client.py
core/repositories/: __init__.py  _accounts_delete.py  _proxies.py  _warming_settings.py  accounts.py  content.py  device_fingerprint.py  dialogues.py  logs.py  proxies.py  spam_status.py  users.py  warming.py  warming_joined.py
core/telegram_client/: __init__.py  _action_results.py  _actions.py  _auth.py  _channels.py  _client.py  _io.py  _listener.py  _media.py  _media_stories.py  _pool.py  _profile.py  _react.py  _read.py  _read_challenge.py  _read_channels.py  _read_profile.py  _read_stories.py  _session.py  _spam.py  _story_image.py  _thumbs.py  _util.py  _video.py
docs/: mutation-testing.md
docs/agents/: domain.md  issue-tracker.md
features/: accounts.py  logs.py  settings.html  settings.py  warming.py
features/accounts/: __init__.py  _add_dialog.py  _controller.py  _dialogs.py  _header.py  _metrics.py  _page.py  _profile_dialog.py  _profile_dialog_common.py  _profile_dialog_footer.py  _profile_dialog_photos.py  _profile_dialog_render.py  _profile_dialog_stories.py  _profile_dialog_tab_music.py  _profile_dialog_tab_story.py  _proxy_dialog.py  _proxy_pool.py  _styles.py  _table.py  _table_cells.py  _table_section.py
features/neurocomment/: __init__.py  _engine_panel.py  _explainer.py  _labels.py  _logpanel.py  _page.py  _setup.py  _workview.py
features/shared/: __init__.py  components.css  nav.py  theme.css  theme.py
features/warming/: __init__.py  _activity.py  _board.py  _board_checks.py  _board_dnd.py  _board_header.py  _board_promote.py  _board_spam.py  _board_styling.py  _channels.py  _config.py  _pipeline.py  _termlog.py
frontend/: .prettierignore  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  steiger.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: main.tsx
schemas/: _warming_settings.py  accounts.py  api.py  auth.py  challenge.py  channels.py  device_fingerprint.py  dialogues.py  gemini.py  geo.py  logs.py  neurocomment.py  neurocomment_bans.py  neurocomment_progress.py  phone_login.py  profile_media.py  proxy.py  spam_status.py  tdata.py  telegram_actions.py  telegram_actions_channels.py  telegram_actions_media.py  telegram_profile_snapshot.py  telegram_session.py  trust.py  warming.py
services/: __init__.py  accounts.py  content.py  dialogues.py  events.py  logs.py  proxies.py  spam_status.py  trust.py  warming.py
services/accounts/: __init__.py  _import_locks.py  _login_state.py  _result.py  _table.py  _tdata.py  _uploads.py  channel_posts.py  channels.py  lifecycle.py  login.py  media.py  profile.py  profile_read.py  proxy.py  sessions.py
services/auth/: __init__.py  _ratelimit.py  policy.py
services/neurocomment/: __init__.py  _classify.py  _filters.py  _generate.py  _join.py  _lifecycle.py  _onboard_channel.py  _onboard_pair.py  _runtime.py  _seams.py  _signals.py  _state.py  _sweep.py  bans.py  board.py  campaigns.py  challenge.py  comments_page.py  engine.py  onboarding.py  settings_store.py
services/warming/: __init__.py  _chat.py  _cycle.py  _fleet.py  _graduation.py  _loop.py  _phases.py  _purge.py  _runner.py  _runtime.py  _seams.py  _state.py  _stories.py  _transitions.py  board.py  channels.py  pacing.py  settings_store.py
tests/: factories.py  test_architecture.py  test_canary.py  test_logevent_i18n_parity.py  test_main_spa.py
tests/api/: accounts_helpers.py  conftest.py  test_accounts.py  test_accounts_channels.py  test_accounts_media.py  test_app.py  test_auth.py  test_events.py  test_logs.py  test_neurocomment.py  test_proxies.py  test_warming.py
tests/core/: conftest.py  test_account_proxy_db.py  test_accounts_db.py  test_auth.py  test_config.py  test_db_maintenance.py  test_db_pragmas.py  test_device_fingerprint.py  test_events.py  test_gemini.py  test_logging.py  test_migrations.py  test_neurocomment_db.py  test_neurocomment_runtime_db.py  test_openai.py  test_phone_geo.py  test_phone_geo_properties.py  test_proxy_check.py  test_proxy_pool_db.py  test_spam_status_db.py  test_spam_status_probe.py  test_tdata_import.py  test_telegram_auth.py  test_telegram_channels.py  test_telegram_execute.py  test_telegram_listener.py  test_telegram_pool.py  test_telegram_read.py  test_telegram_read_challenge.py  test_telegram_read_channels.py  (+5 more)
tools/: aislop_gate.py  gen_api.py  mutation_report.py  mutation_report_core.py  radon_gate.py
web/: index.html
(+369 files in other folders)
