[project]
name = "telebuba"
version = "0.1.0"
description = "Telegram account farm manager: creates accounts, warms them up, generates AI comments."
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "imageio-ffmpeg>=0.5.1",
    "loguru>=0.7.3",
    "nicegui>=3.13.0",
    "opentele2>=1.2.1",
    "phonenumbers>=9.0.32",
    "pillow>=11.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-socks>=2.8.1",
    "sentry-sdk>=2.62.0",
    "sqlalchemy>=2.0.50",
    "telethon>=1.43.2",
]

[dependency-groups]
dev = [
    "aislop>=0.11.0",
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "factory-boy>=3.3.3",
    "hypothesis>=6.155.2",
    "mutmut>=3.6.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "radon>=6.0.1",
    "respx>=0.23.1",
    "ruff>=0.15.16",
    "semgrep>=1.165.0",
    "ty>=0.0.47",
    "vulture>=2.16",
]

# ============================================================================
# uv resolver overrides — security pins for transitive deps.
# Each entry must reference a CVE / advisory and be revisited when the
# upstream chain catches up.
# ============================================================================
[tool.uv]
# Override transitive deps when upstream upper-pins a vulnerable version.
# Each entry must reference a CVE / advisory and be revisited when the
# upstream chain catches up.
override-dependencies = [
    # PYSEC-2026-175/177/178/179 in pyjwt 2.12.1 (pulled by semgrep -> mcp,
    # which upper-pins <2.13). Fix line is 2.13.0. Recheck on semgrep bumps.
    "pyjwt>=2.13.0",
    # CVE-2026-54282/54283 in starlette 1.2.1 (pulled transitively via nicegui ->
    # fastapi). Fix line is 1.3.1. Recheck when nicegui's fastapi pin catches up.
    "starlette>=1.3.1",
    # GHSA-6v7p-g79w-8964 in msgpack <=1.1.2 (pulled transitively, fix 1.2.1).
    "msgpack>=1.2.1",
    # GHSA-4xgf-cpjx-pc3j in pydantic-settings <=2.14.1 (direct dep, fix 2.14.2).
    "pydantic-settings>=2.14.2",
]

# ============================================================================
# pytest — maximum strictness.
# Policy: ANY warning fails the test run. New filterwarnings ignores require a
# one-line justification comment naming the upstream library / issue.
# ============================================================================
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--showlocals",
    "--cov=core",
    "--cov=schemas",
    "--cov=services",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--hypothesis-show-statistics",
]
filterwarnings = [
    "error",
    # Add narrow ignores here as: 'ignore::DeprecationWarning:<module>'
    # Every entry must carry a comment explaining WHY it cannot be fixed upstream.
]
asyncio_mode = "strict"
xfail_strict = true
log_cli = true
log_cli_level = "INFO"

# ============================================================================
# coverage — branch coverage, 90% floor, no skip-covered cheating.
# ============================================================================
[tool.coverage.run]
branch = true
source = ["core", "schemas", "services"]
parallel = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # TOML literal (single-quoted): backslashes are literal, so a rebase/reformat
    # can't corrupt the regex escape into invalid TOML (which breaks `uv sync`).
    '@(typing\.)?overload',
]

# ============================================================================
# ruff — select ALL, ignore only what conflicts with formatter or our policy.
# Tests get narrow exceptions for asserts and magic values.
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # docstrings — we do not write them unless WHY is non-obvious
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    # formatter conflicts (ruff team's own recommendation)
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",      # asserts are the whole point of tests
    "PLR2004",   # magic values are normal in test data
    "ANN",       # type annotations not required on fixtures / test functions
    "SLF001",    # accessing private members is fair game in tests
    "ASYNC240",  # pathlib in async tests is fine — assertions, no blocking I/O
    "RUF001",    # Russian UI strings asserted in tests — Cyrillic is intentional
    "RUF002",
    "RUF003",
]
"conftest.py" = ["ANN", "S101"]
# CI gate helpers: subprocess to dev tools is intentional; they are standalone
# scripts (no package) run by CI / pre-commit, not imported by the app.
"tools/**" = ["S603", "S607", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# ty — Astral type checker (pre-1.0). Strict defaults; revisit when ty stabilizes.
# ============================================================================
[tool.ty.src]
include = ["core", "schemas", "services", "tests", "main.py"]

[tool.ty.rules]
# treat every unresolved or possibly-unbound name as an error
possibly-unresolved-reference = "error"
unresolved-import = "error"

# ============================================================================
# bandit — scan source code; tests are excluded because asserts/test data
# trip false positives.
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "tools"]
skips = []

# ============================================================================
# deptry — flag unused / missing / transitive dependencies.
# ============================================================================
[tool.deptry]
known_first_party = ["core", "schemas", "services"]
# CI gate helpers under tools/ import dev-only tooling (radon); they are not
# part of the shipped app, so exclude them from the dependency scan.
extend_exclude = ["tools"]

[tool.deptry.per_rule_ignores]
# opentele2 is imported lazily via importlib.import_module in core/tdata_import.py
# (so the tdata path stays optional), which deptry's static scan can't see.
DEP002 = ["opentele2"]
# hypothesis is used in conftest.py (test infrastructure). deptry treats the
# root conftest as production code and flags the dev-only import; it is correct
# that hypothesis is a dev dependency.
DEP004 = ["hypothesis"]

# ============================================================================
# vulture — dead code detector. Higher confidence = fewer false positives.
# ============================================================================
[tool.vulture]
min_confidence = 80
paths = ["core", "schemas", "services"]

# ============================================================================
# mutmut — mutation testing. Run nightly; not a PR gate.
# Only mutates lines already covered by tests, and only the pure-logic layers
# (services, schemas) where mutation testing pays off. core/ (I/O gateways) and
# features/ (UI) are excluded — heavily mocked / low-signal and far too slow: the
# full four-package run took 40+ min without finishing.
# ============================================================================
[tool.mutmut]
source_paths = ["services", "schemas"]
pytest_add_cli_args_test_selection = ["tests"]
mutate_only_covered_lines = true
# mutmut copies source into a `mutants/` dir and runs pytest from INSIDE it, so
# everything the suite needs must be copied in too, or collection fails there:
#   - core/, features/ — imported by the tests (e.g. services tests use core.db)
#     but NOT in source_paths, so copied verbatim (present, never mutated);
#   - tests/, the root conftest.py, pyproject.toml (pytest config), and the
#     .env.example that tests/test_architecture.py reads.
# Without this, pytest hits ModuleNotFoundError / collects zero tests inside
# mutants/ and mutmut aborts before testing a single mutant.
also_copy = ["core", "tests", "conftest.py", "pyproject.toml", ".env.example"]
# Drop the project addopts for the per-mutant runs: the strict --cov /
# --cov-fail-under=90 gates would make every partial run exit non-zero and
# corrupt mutmut's kill/survive signal. asyncio_mode / filterwarnings live in
# their own ini keys, so they still apply.
pytest_add_cli_args = ["-o", "addopts="]
